# ubiquity_motor_ros2

./: CMakeLists.txt  CMakeLists_message.txt  CMakeLists_old.txt  README.md  fastdds_config.xml  package.xml  plugin_description.xml  robot_urdf.txt
cfg/: conf.yaml  test.yaml
include/ubiquity_motor/: motor_hardware.h  motor_parameters.h  motor_serial.h
include/ubiquity_motor_ros2/: motor_hardware.h  motor_hardware.h_old  motor_node.h  motor_parameters.h  motor_serial.h
launch/: motors.launch.py  test.launch.py
src/: motor_hardware.cc  motor_hardware.cc.old  motor_message.cc  motor_node.cc  motor_serial.cc  z_pub_turtle.cc
zenoh-c/include/: zenoh.h
